--- a/program/tier_make.ipynb
+++ b/program/tier_make.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,10 +73,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            id  point\n",
+      "name                 \n",
+      "b     2.000000   21.0\n",
+      "a     2.666667   24.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_sorted = df_grouped.sort_values('point')\n",
+    "\n",
+    "print(df_sorted)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
