--- a/program/tier_make.ipynb
+++ b/program/tier_make.ipynb
@@ -94,6 +94,89 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "html_text ='''\n",
+    "<!DOCTYPE html>\n",
+    "<html lang=\"en\">\n",
+    "<head>\n",
+    "    <meta charset=\"UTF-8\">\n",
+    "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
+    "    <title>Ranking Table</title>\n",
+    "    <style>\n",
+    "        body {\n",
+    "            font-family: Arial, sans-serif;\n",
+    "            margin: 20px;\n",
+    "        }\n",
+    "        table {\n",
+    "            width: 100%;\n",
+    "            border-collapse: collapse;\n",
+    "            margin-bottom: 20px;\n",
+    "        }\n",
+    "        th, td {\n",
+    "            border: 1px solid #ccc;\n",
+    "            padding: 10px;\n",
+    "            text-align: left;\n",
+    "        }\n",
+    "        th {\n",
+    "            background-color: #f4f4f4;\n",
+    "        }\n",
+    "        tr:nth-child(even) {\n",
+    "            background-color: #f9f9f9;\n",
+    "        }\n",
+    "        tr:hover {\n",
+    "            background-color: #f1f1f1;\n",
+    "        }\n",
+    "    </style>\n",
+    "</head>\n",
+    "<body>\n",
+    "    <h1>Ranking Table</h1>\n",
+    "    <table>\n",
+    "        <thead>\n",
+    "            <tr>\n",
+    "                <th>Rank</th>\n",
+    "                <th>Name</th>\n",
+    "                <th>Score</th>\n",
+    "                <th>Remarks</th>\n",
+    "            </tr>\n",
+    "        </thead>\n",
+    "        <tbody>\n",
+    "\n",
+    "'''\n",
+    "while (df_sorted[0]):\n",
+    " html_text=html_text+'''\n",
+    "            <tr>\n",
+    "                <td>1</td>\n",
+    "                <td>John Doe</td>\n",
+    "                <td>95</td>\n",
+    "                <td>Excellent performance</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td>2</td>\n",
+    "                <td>Jane Smith</td>\n",
+    "                <td>90</td>\n",
+    "                <td>Great job</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td>3</td>\n",
+    "                <td>Bob Johnson</td>\n",
+    "                <td>85</td>\n",
+    "                <td>Good effort</td>\n",
+    " '''\n",
+    "\n",
+    "html_text=html_text+'''\n",
+    "            </tr>\n",
+    "        </tbody>\n",
+    "    </table>\n",
+    " </body>\n",
+    " </html>\n",
+    " '''"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
