--- a/program/tier_make.ipynb
+++ b/program/tier_make.ipynb
@@ -15,18 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   id name make idea  point\n",
-      "0   1    a    a    a     12\n",
-      "1   2    b    b    b     21\n",
-      "2   3    a    c    c     24\n",
-      "3   4    a    d    d     36\n"
+      "   id name make idea  point remark\n",
+      "0   1    a    a    a     12      a\n",
+      "1   2    b    b    b     21      b\n",
+      "2   3    a    c    c     24      c\n",
+      "3   4    a    d    d     36      d\n"
      ]
     }
    ],
@@ -51,39 +51,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            id  point\n",
-      "name                 \n",
-      "a     2.666667   24.0\n",
-      "b     2.000000   21.0\n"
+      "  name        id  point\n",
+      "0    a  2.666667   24.0\n",
+      "1    b  2.000000   21.0\n"
      ]
     }
    ],
    "source": [
-    "df_grouped= df.groupby('name').mean(numeric_only=True)\n",
+    "df_grouped= df.groupby('name',as_index=False).mean(numeric_only=True)\n",
     "\n",
     "print(df_grouped)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            id  point\n",
-      "name                 \n",
-      "b     2.000000   21.0\n",
-      "a     2.666667   24.0\n"
+      "  name        id  point\n",
+      "1    b  2.000000   21.0\n",
+      "0    a  2.666667   24.0\n"
      ]
     }
    ],
@@ -95,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,32 +138,20 @@
     "                <th>Rank</th>\n",
     "                <th>Name</th>\n",
     "                <th>Score</th>\n",
-    "                <th>Remarks</th>\n",
     "            </tr>\n",
     "        </thead>\n",
     "        <tbody>\n",
     "\n",
     "'''\n",
-    "while (df_sorted[0]):\n",
+    "for k in range (df_sorted.shape[0]):\n",
     " html_text=html_text+'''\n",
+    " \n",
     "            <tr>\n",
-    "                <td>1</td>\n",
-    "                <td>John Doe</td>\n",
-    "                <td>95</td>\n",
-    "                <td>Excellent performance</td>\n",
+    "                <td>{}</td>\n",
+    "                <td>{}</td>\n",
+    "                <td>{}</td>\n",
     "            </tr>\n",
-    "            <tr>\n",
-    "                <td>2</td>\n",
-    "                <td>Jane Smith</td>\n",
-    "                <td>90</td>\n",
-    "                <td>Great job</td>\n",
-    "            </tr>\n",
-    "            <tr>\n",
-    "                <td>3</td>\n",
-    "                <td>Bob Johnson</td>\n",
-    "                <td>85</td>\n",
-    "                <td>Good effort</td>\n",
-    " '''\n",
+    " '''.format(k+1,str(df_sorted['name'][k]),df_sorted['point'][k])\n",
     "\n",
     "html_text=html_text+'''\n",
     "            </tr>\n",
@@ -174,6 +160,31 @@
     " </body>\n",
     " </html>\n",
     " '''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=0\n",
+    "out_path = r'../output/'\n",
+    "\n",
+    "while 1:\n",
+    "    try:\n",
+    "      if a==0:\n",
+    "       f = open('{}test.html'.format(out_path), 'x', encoding='UTF-8')\n",
+    "       break\n",
+    "      else:\n",
+    "        f = open('{}test_{}.html'.format(out_path,str(a)), 'x', encoding='UTF-8')\n",
+    "        break\n",
+    "\n",
+    "    except:\n",
+    "      a+=1\n",
+    "\n",
+    "f.write(html_text)\n",
+    "f.close()\n"
    ]
   },
   {
