--- a/program/tier_make.ipynb
+++ b/program/tier_make.ipynb
@@ -15,6 +15,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# google drive 上で行う場合は下記コマンドを入力すること\n",
+    "from google.colab import drive\n",
+    "drive.mount('/gdrive')\n",
+    "%cd /gdrive"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
