make_rank_system

--- a/program/tier_make.ipynb
+++ b/program/tier_make.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -44,6 +44,7 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "import math\n",
     "\n",
     "\n",
     "df = pd.read_csv('../csv/test.csv')\n",
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -101,6 +102,43 @@
     "df_sorted = df_grouped.sort_values('point')\n",
     "\n",
     "print(df_sorted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 'A', 'A', 'A', 'A', 'B', 'B', 'B', 'B', 'B', 'C', 'C', 'C', 'C', 'C', 'D', 'D', 'D', 'D', 'D', 'E']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "df_sorted_size = df_sorted['name'].size\n",
+    "\n",
+    "df_sorted_size=21\n",
+    "floor_quote_df_sorted_size =math.floor(df_sorted_size/4)\n",
+    "\n",
+    "add_object= ['S']*df_sorted_size\n",
+    "if df_sorted_size<5:\n",
+    "    for i in range(int(df_sorted_size)):\n",
+    "        add_object[i]= chr(65+i)\n",
+    "else:\n",
+    "    for k in range(4):\n",
+    "        for j in range(floor_quote_df_sorted_size):\n",
+    "            add_object[((k*floor_quote_df_sorted_size)+j)]= chr(65+k)\n",
+    "        save_k = k\n",
+    "    for l in range(df_sorted_size-(floor_quote_df_sorted_size*4)):\n",
+    "        add_object[-(l+1)]= chr(65+k+1)\n",
+    "\n",
+    "print(add_object)\n",
+    "\n",
+    "\n"
    ]
   },
   {
